--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 
 <p>
-welcome to my genuis work!!
+I hate this shit
 </p>
- <router-outlet></router-outlet>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
